# arc-cli-rs

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: applescript.rs  arc.rs  cli.rs  main.rs  types.rs  utils.rs
