[package]
name = "arc-cli"
version = "0.0.1"
edition = "2021"
authors = ["seven_bear <fyoylf@gmail.com>"]
description = "A CLI for the Arc Browser (Rust implementation)"
license = "MIT"
repository = "https://github.com/yueneiqi/arc-cli-rs.git"
keywords = ["arc", "browser", "cli"]

[[bin]]
name = "arc-cli-rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
